Fix doctor patient-detail blank page and harden auth/account flows.
Resolve JSP EL Boolean/Integer crashes on health-record fields, restore patient-list detail forward, and align login/register/forgot-password plus medical-document sharing with the unified users schema.

Co-authored-by: Cursor <cursoragent@cursor.com>